--- a/LoginAndRegister/WebContent/WEB-INF/web.xml
+++ b/LoginAndRegister/WebContent/WEB-INF/web.xml
@@ -7,8 +7,16 @@
 		<servlet-name>LoginServlet</servlet-name>
 		<servlet-class>login.LoginServlet</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>RegisterServlet</servlet-name>
+		<servlet-class>register.RegisterServlet</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>LoginServlet</servlet-name>
 		<url-pattern>/LoginServlet.do</url-pattern>
+	</servlet-mapping>
+	<servlet-mapping>
+		<servlet-name>RegisterServlet</servlet-name>
+		<url-pattern>/RegisterServlet.do</url-pattern>
 	</servlet-mapping>
 </web-app>
